@@ -35,11 +35,77 @@ public class Deities extends StdCommand
 {
 	public Deities(){}
 
-	private String[] access={"DEITIES","GODS"};
+	private String[] access={"DEITIES","GODS","DEITY"};
 	public String[] getAccessWords(){return access;}
+
+	public String getDeityInformation(MOB mob, Deity D)
+	{
+		StringBuffer msg = new StringBuffer("");
+		msg.append("\n\r^x"+D.name()+"^.^?\n\r");
+		msg.append(D.description()+"\n\r\n\r");
+        if((mob==null)||(CMSecurity.isASysOp(mob)))
+        {
+            msg.append(D.getClericRequirementsDesc()+"\n\r\n\r");
+            msg.append(D.getWorshipRequirementsDesc()+"\n\r");
+        }
+        else
+        if(mob.charStats().getCurrentClass().baseClass().equals("Cleric"))
+			msg.append(D.getClericRequirementsDesc()+"\n\r");
+        else
+            msg.append(D.getWorshipRequirementsDesc()+"\n\r");
+		if(D.numBlessings()>0)
+		{
+			msg.append("\n\r^HBlessings: ^N");
+			for(int b=0;b<D.numBlessings();b++)
+			{
+				msg.append(D.fetchBlessing(b).name());
+                if(D.fetchBlessingCleric(b))
+                    msg.append(" (Clerics only)");
+				if(b<D.numBlessings()-1)
+					msg.append(", ");
+			}
+			msg.append("\n\r^HBlessing Instructions: ^N");
+            if((mob==null)||(CMSecurity.isASysOp(mob)))
+            {
+                msg.append(D.getClericTriggerDesc()+"\n\r");
+                msg.append(D.getWorshipTriggerDesc()+"\n\r");
+            }
+            else
+            if(mob.charStats().getCurrentClass().baseClass().equals("Cleric"))
+                msg.append(D.getClericTriggerDesc()+"\n\r");
+            else
+                msg.append(D.getWorshipTriggerDesc()+"\n\r");
+		}
+        if((mob==null)||CMSecurity.isASysOp(mob)||mob.charStats().getCurrentClass().baseClass().equals("Cleric"))
+        {
+			if(D.numPowers()>0)
+			{
+				msg.append("\n\r^HGranted Powers: ^N");
+				for(int b=0;b<D.numPowers();b++)
+				{
+					msg.append(D.fetchPower(b).name());
+					if(b<D.numPowers()-1)
+						msg.append(", ");
+				}
+				msg.append("\n\r^HPowers Instructions: ^N");
+				msg.append(D.getClericPowerupDesc()+"\n\r");
+			}
+			msg.append("\n\r^HService Instructions: ^N");
+            msg.append(D.getServiceTriggerDesc()+"\n\r");
+        }
+        return msg.toString();
+	}
+	
 	public boolean execute(MOB mob, Vector commands, int metaFlags)
 		throws java.io.IOException
 	{
+		if((commands.size()>1)&&(commands.elementAt(1) instanceof Deity))
+		{
+			Deity D=(Deity)commands.elementAt(1);
+			commands.clear();
+			commands.addElement(this.getDeityInformation(mob, D));
+		}
+		
 		String str=CMParms.combine(commands,1).toUpperCase();
 		StringBuffer msg=new StringBuffer("");
 		if(str.length()==0)
@@ -51,59 +117,7 @@ public class Deities extends StdCommand
 		{
 			Deity D=(Deity)d.nextElement();
 			if((str.length()>0)&&(CMLib.english().containsString(D.name(),str)))
-			{
-				msg.append("\n\r^x"+D.name()+"^.^?\n\r");
-				msg.append(D.description()+"\n\r");
-                if((mob==null)||(CMSecurity.isASysOp(mob)))
-                {
-                    msg.append(D.getClericRequirementsDesc()+"\n\r");
-                    msg.append(D.getWorshipRequirementsDesc()+"\n\r");
-                }
-                else
-                if(mob.charStats().getCurrentClass().baseClass().equals("Cleric"))
-    				msg.append(D.getClericRequirementsDesc()+"\n\r");
-                else
-                    msg.append(D.getWorshipRequirementsDesc()+"\n\r");
-				if(D.numBlessings()>0)
-				{
-					msg.append("\n\rBlessings: ");
-					for(int b=0;b<D.numBlessings();b++)
-					{
-						msg.append(D.fetchBlessing(b).name());
-                        if(D.fetchBlessingCleric(b))
-                            msg.append(" (Clerics only)");
-						if(b<D.numBlessings()-1)
-							msg.append(", ");
-					}
-					msg.append("\n\r");
-                    if((mob==null)||(CMSecurity.isASysOp(mob)))
-                    {
-                        msg.append(D.getClericTriggerDesc()+"\n\r");
-                        msg.append(D.getWorshipTriggerDesc()+"\n\r");
-                    }
-                    else
-                    if(mob.charStats().getCurrentClass().baseClass().equals("Cleric"))
-                        msg.append(D.getClericTriggerDesc()+"\n\r");
-                    else
-                        msg.append(D.getWorshipTriggerDesc()+"\n\r");
-				}
-                if((mob==null)||CMSecurity.isASysOp(mob)||mob.charStats().getCurrentClass().baseClass().equals("Cleric"))
-                {
-    				if(D.numPowers()>0)
-    				{
-    					msg.append("\n\rGranted Powers: ");
-    					for(int b=0;b<D.numPowers();b++)
-    					{
-    						msg.append(D.fetchPower(b).name());
-    						if(b<D.numPowers()-1)
-    							msg.append(", ");
-    					}
-    					msg.append("\n\r");
-    					msg.append(D.getClericPowerupDesc()+"\n\r");
-    				}
-                    msg.append(D.getServiceTriggerDesc()+"\n\r");
-                }
-			}
+				msg.append(this.getDeityInformation(mob, D));
 			else
 			if(str.length()==0)
 			{
