@@ -663,14 +663,13 @@ Short(s): \n\r\
 Changes your description to the text specified.  The description \
 is the text seen when someone LOOKs at you.
 	
-DIETY=A Deity is a god.  See the DEITIES command.
-DEITY=A Deity is a god.  See the DEITIES command.
+DEITY=DEITIES
 GODS=DEITIES
 DEITIES=\
 Command : DEITIES\n\r\
 Usage   : DEITIES\n\r\
 Example : deities\n\r\
-Short(s): GODS\n\r\
+Short(s): GODS, DEITY\n\r\
 This command will list all the known deities in your realm, along with \
 some information about them, the requirements to worship them, the \
 requirements to become a cleric of them, the blessings they bestow, \
